# CopyProgramm

./: .gitignore  CMakeLists.txt  README.md
UML/: sequence.planttext
src/: CMakeLists.txt  Constants.h  CopyManager.cc  CopyManager.h  FileDestination.cc  FileDestination.h  FileSource.cc  FileSource.h  IDataDestination.h  IDataSource.h  IDataTransport.h  SharedMemoryTransport.cc  SharedMemoryTransport.h  copy.cc
tests/: CMakeLists.txt  CopyManagerTest.cc
